--- a/backup_sudoers.yml
+++ b/backup_sudoers.yml
@@ -1,4 +1,12 @@
 ---
-- name: Backup Sudoers file
-  ansible.builtin.shell:
-    cmd: cat /etc/sudoers
+  - name: Shell Examples
+    hosts: webservers
+    tasks:
+
+    - name: Check Date with Shell command
+      shell:
+         "date"
+      register: datecmd
+      tags: datecmd
+
+    - debug: msg="{{datecmd.stdout}}"
