--- a/install_apache_rh.yml
+++ b/install_apache_rh.yml
@@ -12,3 +12,8 @@
         name: httpd
         enabled: true
         state: started
+    - name: open firewall
+      ansible.posix.firewalld:
+        service: httpd
+        state: enabled
+        immediate: true
