--- a/disable_ipv6.yml
+++ b/disable_ipv6.yml
@@ -1,11 +1,14 @@
 ---
 - name: Disable ipv6 via registry key
-  win_regedit:
-    path: HKLM\SYSTEM\CurrentControlSet\Services\Tcpip6\Parameters
-    name: DisabledComponents
-    data: 0xff
-    type: dword
-  register: reg_done
-- name: reboot server
-  win_reboot:
-    when: reg_done.changed
+  hosts: all
+  gather_facts: no
+
+  tasks:
+    win_regedit:
+      path: HKLM\SYSTEM\CurrentControlSet\Services\Tcpip6\Parameters
+      name: DisabledComponents
+      data: 0xff
+      type: dword
+    register: reg_done
+    win_reboot:
+      when: reg_done.changed
