--- a/disable_ipv6.yml
+++ b/disable_ipv6.yml
@@ -4,11 +4,13 @@
   gather_facts: no
 
   tasks:
-    win_regedit:
-      path: HKLM\SYSTEM\CurrentControlSet\Services\Tcpip6\Parameters
-      name: DisabledComponents
-      data: 0xff
-      type: dword
-    register: reg_done
-    win_reboot:
-      when: reg_done.changed
+    - name: adding reg key
+      ansible.windows.win_regedit:
+        path: HKLM\SYSTEM\CurrentControlSet\Services\Tcpip6\Parameters
+        name: DisabledComponents
+        data: 0xff
+        type: dword
+        register: complete
+    - name: reboot
+      ansible.windows.win_reboot:
+        when: complete.changed
