--- a/disable_ipv6.yml
+++ b/disable_ipv6.yml
@@ -6,10 +6,11 @@
   tasks:
     - name: adding reg key
       ansible.windows.win_regedit:
-        path: HKLM\SYSTEM\CurrentControlSet\Services\Tcpip6\Parameters
+        path: HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Services\Tcpip6\Parameters
         name: DisabledComponents
         data: 0xff
         type: dword
+        state: present
       register: complete
     - name: reboot
       ansible.windows.win_reboot:
