--- a/disable_ipv6.yml
+++ b/disable_ipv6.yml
@@ -5,7 +5,7 @@
 
   tasks:
     - name: adding reg key
-      ansible.windows.win_regmerge:
+      ansible.windows.win_regedit:
         key: 'HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Services\Tcpip6\Parameters'
         value: DisabledComponents
         data: 0xff
