--- a/disable_ipv6.yml
+++ b/disable_ipv6.yml
@@ -11,7 +11,10 @@
         data: '0xff'
         type: dword
         state: present
-      register: complete
-    - name: reboot
-      ansible.windows.win_reboot:
-        when: complete.changed
+      register: done
+
+    - name: reboot server
+      win_reboot:
+        msg: "Installing AD. Rebooting..."
+        pre_reboot_delay: 15
+      when: done.changed
