--- a/join_domain.yml
+++ b/join_domain.yml
@@ -5,6 +5,11 @@
   gather_facts: no
 
   tasks:
+    - name: set DNS IP address
+      win_dns_client:
+        adapter_names: Ethernet
+        dns_servers: 192.168.34.5
+    
     - name: joining to domain
       win_domain_membership:
         dns_domain_name: "demo.lab"
