--- a/gather_facts_win.yml
+++ b/gather_facts_win.yml
@@ -1,5 +1,10 @@
 ---
 - name: Gather Facts on Windows system
   hosts: all
-  tasks: 
-    setup:
+  gather_facts: true
+
+  tasks:
+    - setup:
+      register: ansible_facts
+    - debug: item
+      with_dict: ansible_facts
