--- a/win_interface.yml
+++ b/win_interface.yml
@@ -1,6 +1,9 @@
 ---
+
 - name: define traditional ethernet facts
   hosts: all
+
   tasks:
-    debug:
-      msg: "{{ ansible_facts.interfaces }}"
+    - name: show interface
+        debug:
+        msg: "{{ ansible_facts.interfaces }}"
