--- a/win_interface.yml
+++ b/win_interface.yml
@@ -7,4 +7,6 @@
   tasks: 
     - name: debug
       debug:
-        msg: "{{ ansible_facts }}"
+        msg: "{{ item.connection_name }}"
+      with_items:
+        - "{{ ansible_facts['interfaces'] }}"
