--- a/manual_inventory.yml
+++ b/manual_inventory.yml
@@ -15,7 +15,7 @@ windows:
     win1
     win2
   vars:
-    ansible_user:Administrator
-    ansible_password:W3lcome$1
-    ansible_connection:winrm
-    ansible_winrm_transport:CredSSP
+    ansible_port: 5985
+    ansible_connection: winrm
+    ansible_user: Administrator
+    ansible_password: W3lcome$1
