--- a/windows_update.yml
+++ b/windows_update.yml
@@ -6,6 +6,6 @@
   tasks:
     - name: Win Update
       ansible.windows.win_updates:
-      category_names: *
+      category_names: "*"
       state: installed
       reboot: yes
