--- a/windows_update.yml
+++ b/windows_update.yml
@@ -4,10 +4,10 @@
   
   tasks:
     - name: Add  PsWindowsUpdate Powershell Module
-      ansible.windows.win_psmodule:
+      community.windows.win_psmodule:
         name: PsWindowsUpdate
         state: present
-        
+
     - name: Win Update
       ansible.windows.win_updates:
         category_names: '*'
