--- a/windows_update.yml
+++ b/windows_update.yml
@@ -1,6 +1,8 @@
 ---
 - name: Update Windows using Ansible
   hosts: nondc
+  collections: 
+    - community.windows
   
   tasks:
     - name: Add  PsWindowsUpdate Powershell Module
