--- a/win_chocolaty.yml
+++ b/win_chocolaty.yml
@@ -10,5 +10,5 @@
   tasks:
     - name: install packages
       chocolatey.chocolatey.win_chocolatey:
-        name: {{ packages }}
+        name: "{{ packages }}"
         state: present
